fix nav li spacing

--- a/src/app/styles/elements.css
+++ b/src/app/styles/elements.css
@@ -22,7 +22,7 @@ nav li{
   margin-left: 0;
 }
 nav a {
-  margin-left: var(--g4);
+  margin: 0;
 }
 
 #logo{
